make sure that images are visible

--- a/fiit-animation-slider/styles.css
+++ b/fiit-animation-slider/styles.css
@@ -40,7 +40,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  transition: 700ms cubic-bezier(.17, .67, .83, .67);
+  transition: 700ms cubic-bezier(.17, 1, 1, 1);
   transform: scale(0);
   opacity: 0;
 }
@@ -50,7 +50,7 @@ body {
 }
 .slider-single.preactivede > .slider-single-image {
   opacity: 1;
-  transform: translateX(-50%) scale(0.6);
+  transform: translateX(-70%) scale(0.6);
 }
 
 .slider-single.preactive {
@@ -58,7 +58,7 @@ body {
 }
 .slider-single.preactive > .slider-single-image {
   opacity: 1;
-  transform: translateX(-25%) scale(.8);
+  transform: translateX(-50%) scale(.8);
 }
 
 .slider-single.proactive {
@@ -66,7 +66,7 @@ body {
 }
 .slider-single.proactive > .slider-single-image {
   opacity: 1;
-  transform: translateX(25%) scale(.8);
+  transform: translateX(50%) scale(.8);
 }
 
 .slider-single.proactivede {
@@ -74,7 +74,7 @@ body {
 }
 .slider-single.proactivede > .slider-single-image {
   opacity: 1;
-  transform: translateX(50%) scale(0.6);
+  transform: translateX(70%) scale(0.6);
 }
 
 .slider-single.active {
